# HermesCollabProject

./: .gitignore  AGENTS.md  HelloHermes  README.md  pyproject.toml
prompts/: 01_review_stakeholder_requirements.md  02_create_change_request.md  03_run_impact_analysis.md  04_derive_system_requirements.md  05_derive_software_requirements.md  06_generate_test_specifications.md  07_implement_swr_with_codex.md  08_review_and_verify.md
src/: README.md
src/calculator_demo/: app.py  controller.py  core.py  strings.py  ui.py
src/workflow_demo/: __init__.py  config_loader.py  run_workflow.py
tests/acceptance/: README.md
tests/integration/: README.md
tests/system/: README.md
tests/unit/: README.md  test_calculator_app.py  test_calculator_controller.py  test_calculator_core.py  test_calculator_ui_spec.py  test_config_loader.py  test_pytest_entrypoint.py  test_run_codex_for_swr.py  test_vmodel_tools.py
tools/: _vmodel_common.py  generate_trace_matrix.py  generate_verification_report.py  hermes_orchestrator.py  run_codex_for_swr.py  validate_code_links.py  validate_requirements.py  validate_traceability.py
vmodel/architecture/: design_decisions.yaml  interfaces.yaml  software_architecture.md  system_architecture.md
vmodel/baselines/: README.md
vmodel/change/: change_log.yaml  stakeholder_change_requests.yaml
vmodel/project/: change_log.yaml  quality_plan.yaml  tailoring.yaml
vmodel/requirements/: calculator_stakeholder_requirements.yaml  requirement_reviews.yaml  software_requirements.yaml  stakeholder_requirements.yaml  system_requirements.yaml
(+15 files in other folders)
